# poker_bot

./: .gitignore  Cargo.toml  README.md  typos.toml
benches/: poker_bot_benchmark.rs
src/: combinations.rs  common.rs  io.rs  lib.rs  main.rs  scalar.rs  simd.rs
tests/: basic.rs  combinations.rs  highest_possible_hand.rs
tests/snapshots/: basic__combinations.snap  combinations__basic.snap
