cargo-features = ["codegen-backend", "edition2024"]
[package]
name = "poker_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
array-macro = "2.1.8"
coz = "0.1.3"
itertools = "0.13.0"
mimalloc = "0.1.43"
rand = "0.8.5"
rayon = "1.10.0"
seq-macro = "0.3.5"

[dev-dependencies]
criterion = "0.5.1"
insta = "1.40.0"

[[bench]]
name = "poker_bot_benchmark"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.profile]
inherits = "dev"
strip = false
debug = 1
codegen-units = 1
panic = "abort"
lto = true
